Stash all created canvases to a global object for further use.

--- a/test.html
+++ b/test.html
@@ -21,7 +21,7 @@
 
   <script>
   var params = {
-    "id": "6b02b1ad",
+    "hash": "6b02b1ad",
     "parent_element_id": "art",
     "width": 16,
     "height": 8,
